--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
       run: |
         source venv/bin/activate
         fbs freeze
-        hdiutil create -volname Vial -srcfolder "target/Curlton Vial MIDI.app" -ov -format UDZO vial-mac.dmg
+        hdiutil create -volname Vial -srcfolder "target/Curlton KeyStation.app" -ov -format UDZO vial-mac.dmg
 
     - uses: actions/upload-artifact@v3
       with:
@@ -107,7 +107,7 @@ jobs:
       run: |
         . .\venv\Scripts\activate.ps1
         fbs freeze
-        Compress-Archive -Path "target\Curlton Vial MIDI" -DestinationPath vial-win.zip
+        Compress-Archive -Path "target\Curlton KeyStation" -DestinationPath vial-win.zip
 
     - uses: actions/upload-artifact@v3
       with:
@@ -123,4 +123,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: vial-win-installer
-        path: target\Curlton Vial MIDISetup.exe
+        path: target\Curlton KeyStationSetup.exe
