--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,16 @@ on: [push, pull_request]
 jobs:
   build-linux:
     runs-on: ubuntu-22.04
+
     container:
-      image: ubuntu:22.04
+      image: ubuntu:18.04
       options: --privileged
+      env:
+        LD_LIBRARY_PATH: /__w/vial-gui/vial-gui/util/python36/prefix/lib/
+
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
+
     - name: Install dependencies
       run: |
         apt-get update
@@ -17,13 +22,16 @@ jobs:
         wget https://github.com/AppImage/pkg2appimage/archive/38603d92359a48189c35debad9005e8e902e6070.zip
         unzip *.zip
         gem install --no-document fpm
+
     - name: Set up Python 3.6
       run: ./util/setup_python36.sh
+
     - name: Setup venv
       run: |
         ./util/python36/prefix/bin/python3 -m venv venv
         . venv/bin/activate
         pip install -r requirements.txt
+
     - name: Build
       run: |
         . venv/bin/activate
@@ -32,11 +40,11 @@ jobs:
         deactivate
         ./pkg2appimage-*/pkg2appimage misc/Vial.yml
         mv out/Vial-*.AppImage out/Vial-x86_64.AppImage
-    - uses: actions/upload-artifact@v4
+
+    - uses: actions/upload-artifact@v3
       with:
         name: vial-linux
         path: out/Vial-x86_64.AppImage
-
 
   build-mac:
     runs-on: macos-11
@@ -45,7 +53,7 @@ jobs:
       MACOSX_DEPLOYMENT_TARGET: 10.9
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
 
     - name: Get Python
       run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx${MACOSX_DEPLOYMENT_TARGET}.pkg -o "python.pkg"
@@ -67,9 +75,9 @@ jobs:
       run: |
         source venv/bin/activate
         fbs freeze
-        hdiutil create -volname Vial -srcfolder "target/Curlton KeyStation.app" -ov -format UDZO vial-mac.dmg
+        hdiutil create -volname Vial -srcfolder "target/Vial.app" -ov -format UDZO vial-mac.dmg
 
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v3
       with:
         name: vial-mac
         path: vial-mac.dmg
@@ -78,7 +86,7 @@ jobs:
     runs-on: windows-2019
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
         python-version: '3.6.x'
@@ -99,9 +107,9 @@ jobs:
       run: |
         . .\venv\Scripts\activate.ps1
         fbs freeze
-        Compress-Archive -Path "target\Curlton KeyStation" -DestinationPath vial-win.zip
+        Compress-Archive -Path "target\Vial" -DestinationPath vial-win.zip
 
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v3
       with:
         name: vial-win
         path: vial-win.zip
@@ -112,7 +120,7 @@ jobs:
         . .\venv\Scripts\activate.ps1
         fbs installer
 
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v3
       with:
         name: vial-win-installer
-        path: target\Curlton KeyStationSetup.exe
+        path: target\VialSetup.exe
