--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,16 +5,8 @@ on: [push, pull_request]
 jobs:
   build-linux:
     runs-on: ubuntu-22.04
-
-    container:
-      image: ubuntu:22.04
-      options: --privileged
-      env:
-        LD_LIBRARY_PATH: /__w/vial-gui/vial-gui/util/python36/prefix/lib/
-
     steps:
-    - uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
     - name: Install dependencies
       run: |
         apt-get update
@@ -22,16 +14,13 @@ jobs:
         wget https://github.com/AppImage/pkg2appimage/archive/38603d92359a48189c35debad9005e8e902e6070.zip
         unzip *.zip
         gem install --no-document fpm
-
     - name: Set up Python 3.6
       run: ./util/setup_python36.sh
-
     - name: Setup venv
       run: |
         ./util/python36/prefix/bin/python3 -m venv venv
         . venv/bin/activate
         pip install -r requirements.txt
-
     - name: Build
       run: |
         . venv/bin/activate
@@ -40,87 +29,68 @@ jobs:
         deactivate
         ./pkg2appimage-*/pkg2appimage misc/Vial.yml
         mv out/Vial-*.AppImage out/Vial-x86_64.AppImage
-
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
       with:
         name: vial-linux
         path: out/Vial-x86_64.AppImage
 
   build-mac:
     runs-on: macos-11
-    env:
-      PYTHON_VERSION: 3.6.8
-      MACOSX_DEPLOYMENT_TARGET: 10.9
-
     steps:
-    - uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
     - name: Get Python
       run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx${MACOSX_DEPLOYMENT_TARGET}.pkg -o "python.pkg"
-
     - name: Verify download
       run: shasum -a 256 -c <<< '4bcd53faffc98d193ef7cdccd5668de3829c702af4db45258819a84a2cab60d0 *python.pkg'
-
     - name: Install Python
-      run: |
-        sudo installer -pkg python.pkg -target /
-
+      run: sudo installer -pkg python.pkg -target /
     - name: Setup venv
       run: |
         python3 -m venv venv
         source venv/bin/activate
         pip install -r requirements.txt
-
     - name: Build
       run: |
         source venv/bin/activate
         fbs freeze
         hdiutil create -volname Vial -srcfolder "target/Curlton KeyStation.app" -ov -format UDZO vial-mac.dmg
-
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
       with:
         name: vial-mac
         path: vial-mac.dmg
 
   build-win:
     runs-on: windows-2019
-
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v4
+    - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
+    - uses: actions/setup-python@v5  # Updated to v5 for Node.js 20 support
       with:
         python-version: '3.6.x'
-
     - name: Setup venv
       run: |
         python -m venv venv
         . .\venv\Scripts\activate.ps1
         pip install -r requirements.txt
-
     - name: Install NSIS
       run: |
         Invoke-WebRequest "https://github.com/vial-kb/vial-deps/releases/download/v1/nsis-3.06.1-setup.exe" -UserAgent "wget" -OutFile nsis-3.06.1-setup.exe
         if ((Get-FileHash nsis-3.06.1-setup.exe -Algorithm sha256).Hash -ne "f60488a676308079bfdf6845dc7114cfd4bbff47b66be4db827b89bb8d7fdc52") { Write-Error 'SHA256 mismatch' }
         Start-Process -FilePath "nsis-3.06.1-setup.exe" -ArgumentList "/S", "/D=C:\Program Files (x86)\NSIS" -NoNewWindow -Wait
-
     - name: Build
       run: |
         . .\venv\Scripts\activate.ps1
         fbs freeze
         Compress-Archive -Path "target\Curlton KeyStation" -DestinationPath vial-win.zip
-
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
       with:
         name: vial-win
         path: vial-win.zip
-
     - name: Create installer
       run: |
         $env:Path += ";C:\Program Files (x86)\NSIS"
         . .\venv\Scripts\activate.ps1
         fbs installer
-
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
       with:
         name: vial-win-installer
         path: target\Curlton KeyStationSetup.exe
