--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,25 +2,37 @@ name: CI
 
 on: [push, pull_request]
 
+
 jobs:
   build-linux:
     runs-on: ubuntu-22.04
+
+    container:
+      image: ubuntu:18.04
+      options: --privileged
+      env:
+        LD_LIBRARY_PATH: /__w/vial-gui/vial-gui/util/python36/prefix/lib/
+
     steps:
-    - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
+    - uses: actions/checkout@v4
+
     - name: Install dependencies
       run: |
-        apt-get update
-        apt-get install -y libusb-1.0-0-dev libudev-dev ruby ruby-dev rubygems build-essential desktop-file-utils wget unzip zlib1g-dev liblzma-dev libssl-dev git imagemagick file libfuse2
+        sudo apt-get update
+        sudo apt-get install -y libusb-1.0-0-dev libudev-dev ruby ruby-dev rubygems build-essential desktop-file-utils wget unzip zlib1g-dev liblzma-dev libssl-dev git imagemagick file libfuse2
         wget https://github.com/AppImage/pkg2appimage/archive/38603d92359a48189c35debad9005e8e902e6070.zip
         unzip *.zip
-        gem install --no-document fpm
+        sudo gem install --no-document fpm
+
     - name: Set up Python 3.6
       run: ./util/setup_python36.sh
+
     - name: Setup venv
       run: |
         ./util/python36/prefix/bin/python3 -m venv venv
         . venv/bin/activate
         pip install -r requirements.txt
+
     - name: Build
       run: |
         . venv/bin/activate
@@ -29,10 +41,12 @@ jobs:
         deactivate
         ./pkg2appimage-*/pkg2appimage misc/Vial.yml
         mv out/Vial-*.AppImage out/Vial-x86_64.AppImage
-    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
+
+    - uses: actions/upload-artifact@v4
       with:
         name: vial-linux
         path: out/Vial-x86_64.AppImage
+
 
   build-mac:
     runs-on: macos-11
