--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,17 @@ jobs:
         sudo gem install --no-document fpm
 
     - name: Set up Python 3.6
-      run: ./util/setup_python36.sh
+      run: |
+        # Ensure that python3.6 and its pip are available
+        sudo apt-get install -y python3.6 python3.6-distutils
+        curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+        sudo python3.6 get-pip.py
 
     - name: Setup venv
       run: |
         python3.6 -m venv venv
         . venv/bin/activate
+        pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Build
@@ -39,6 +44,7 @@ jobs:
       with:
         name: vial-linux
         path: out/Vial-x86_64.AppImage
+
 
   build-mac:
     runs-on: macos-11
