--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,33 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libusb-1.0-0-dev libudev-dev ruby ruby-dev rubygems build-essential desktop-file-utils wget unzip zlib1g-dev liblzma-dev libssl-dev git imagemagick file libfuse2
-        wget https://github.com/AppImage/pkg2appimage/archive/38603d92359a48189c35debad9005e8e902e6070.zip
-        unzip *.zip
-        sudo gem install --no-document fpm
+        sudo apt-get install -y \
+          libusb-1.0-0-dev \
+          libudev-dev \
+          ruby \
+          ruby-dev \
+          rubygems \
+          build-essential \
+          desktop-file-utils \
+          wget \
+          unzip \
+          zlib1g-dev \
+          liblzma-dev \
+          libssl-dev \
+          git \
+          imagemagick \
+          file \
+          libfuse2 \
+          software-properties-common
 
-    - name: Set up Python 3.6
+    - name: Add Python 3.6 repository
       run: |
-        # Ensure that python3.6 and its pip are available
-        sudo apt-get install -y python3.6 python3.6-distutils
+        sudo add-apt-repository ppa:deadsnakes/ppa
+        sudo apt-get update
+
+    - name: Install Python 3.6
+      run: |
+        sudo apt-get install -y python3.6 python3.6-venv python3.6-dev
         curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
         sudo python3.6 get-pip.py
 
