--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,54 +12,17 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y \
-          libusb-1.0-0-dev \
-          libudev-dev \
-          ruby \
-          ruby-dev \
-          rubygems \
-          build-essential \
-          desktop-file-utils \
-          wget \
-          unzip \
-          zlib1g-dev \
-          liblzma-dev \
-          libssl-dev \
-          git \
-          imagemagick \
-          file \
-          libfuse2 \
-          libffi-dev \
-          libbz2-dev \
-          libreadline-dev \
-          libsqlite3-dev \
-          wget \
-          libncurses5-dev \
-          libncursesw5-dev \
-          xz-utils \
-          tk-dev \
-          liblzma-dev \
-          zlib1g-dev
+        sudo apt-get install -y libusb-1.0-0-dev libudev-dev ruby ruby-dev rubygems build-essential desktop-file-utils wget unzip zlib1g-dev liblzma-dev libssl-dev git imagemagick file libfuse2
+        wget https://github.com/AppImage/pkg2appimage/archive/38603d92359a48189c35debad9005e8e902e6070.zip
+        unzip *.zip
+        sudo gem install --no-document fpm
 
-    - name: Download and install Python 3.6
-      run: |
-        wget https://www.python.org/ftp/python/3.6.15/Python-3.6.15.tgz
-        tar -xvf Python-3.6.15.tgz
-        cd Python-3.6.15
-        ./configure --enable-optimizations
-        make
-        sudo make altinstall
-        cd ..
-        rm -rf Python-3.6.15 Python-3.6.15.tgz
-
-    - name: Ensure pip is available
-      run: |
-        sudo /usr/local/bin/python3.6 -m ensurepip
-        sudo /usr/local/bin/python3.6 -m pip install --upgrade pip
+    - name: Set up Python 3.6
+      run: ./util/setup_python36.sh
 
     - name: Setup venv
       run: |
-        /usr/local/bin/python3.6 -m venv venv
+        python3.6 -m venv venv
         . venv/bin/activate
         pip install -r requirements.txt
 
@@ -78,7 +41,7 @@ jobs:
         path: out/Vial-x86_64.AppImage
 
   build-mac:
-    runs-on: macos-11
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
     - name: Get Python
