--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,43 +76,43 @@ jobs:
         path: out/Vial-x86_64.AppImage
 
   build-mac:
-  runs-on: macos-latest  # Use the latest macOS runner
+    runs-on: macos-latest  # Use the latest macOS runner
 
-  steps:
-  - uses: actions/checkout@v4
+    steps:
+    - uses: actions/checkout@v4
 
-  - name: Get Python
-    run: curl -L https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx${MACOSX_DEPLOYMENT_TARGET}.pkg -o "python.pkg"
+    - name: Get Python
+      run: curl -L https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx${MACOSX_DEPLOYMENT_TARGET}.pkg -o "python.pkg"
 
-  - name: Verify download
-    run: shasum -a 256 -c <<< '4bcd53faffc98d193ef7cdccd5668de3829c702af4db45258819a84a2cab60d0 *python.pkg'
+    - name: Verify download
+      run: shasum -a 256 -c <<< '4bcd53faffc98d193ef7cdccd5668de3829c702af4db45258819a84a2cab60d0 *python.pkg'
 
-  - name: Install Python
-    run: sudo installer -pkg python.pkg -target /
+    - name: Install Python
+      run: sudo installer -pkg python.pkg -target /
 
-  - name: Setup venv
-    run: |
-      python3 -m venv venv
-      source venv/bin/activate
-      pip install -r requirements.txt
+    - name: Setup venv
+      run: |
+        python3 -m venv venv
+        source venv/bin/activate
+        pip install -r requirements.txt
 
-  - name: Build
-    run: |
-      source venv/bin/activate
-      fbs freeze
-      hdiutil create -volname Vial -srcfolder "target/Curlton KeyStation.app" -ov -format UDZO vial-mac.dmg
+    - name: Build
+      run: |
+        source venv/bin/activate
+        fbs freeze
+        hdiutil create -volname Vial -srcfolder "target/Curlton KeyStation.app" -ov -format UDZO vial-mac.dmg
 
-  - uses: actions/upload-artifact@v4
-    with:
-      name: vial-mac
-      path: vial-mac.dmg
-
+    - uses: actions/upload-artifact@v4
+      with:
+        name: vial-mac
+        path: vial-mac.dmg
 
   build-win:
     runs-on: windows-2019
+
     steps:
-    - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
-    - uses: actions/setup-python@v5  # Updated to v5 for Node.js 20 support
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: '3.6.x'
     - name: Setup venv
@@ -130,7 +130,7 @@ jobs:
         . .\venv\Scripts\activate.ps1
         fbs freeze
         Compress-Archive -Path "target\Curlton KeyStation" -DestinationPath vial-win.zip
-    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
+    - uses: actions/upload-artifact@v4
       with:
         name: vial-win
         path: vial-win.zip
@@ -139,7 +139,7 @@ jobs:
         $env:Path += ";C:\Program Files (x86)\NSIS"
         . .\venv\Scripts\activate.ps1
         fbs installer
-    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
+    - uses: actions/upload-artifact@v4
       with:
         name: vial-win-installer
         path: target\Curlton KeyStationSetup.exe
