--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,48 +12,13 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y \
-          libusb-1.0-0-dev \
-          libudev-dev \
-          ruby \
-          ruby-dev \
-          rubygems \
-          build-essential \
-          desktop-file-utils \
-          wget \
-          unzip \
-          zlib1g-dev \
-          liblzma-dev \
-          libssl-dev \
-          git \
-          imagemagick \
-          file \
-          libfuse2 \
-          libncurses5 \
-          libbz2-dev \
-          liblzma-dev \
-          zlib1g-dev \
-          libffi-dev \
-          libsqlite3-dev \
-          libreadline-dev \
-          libncursesw5-dev \
-          libgdbm-dev \
-          libgdbm-compat-dev \
-          libdb5.3-dev
+        sudo apt-get install -y libusb-1.0-0-dev libudev-dev ruby ruby-dev rubygems build-essential desktop-file-utils wget unzip zlib1g-dev liblzma-dev libssl-dev git imagemagick file libfuse2
+        wget https://github.com/AppImage/pkg2appimage/archive/38603d92359a48189c35debad9005e8e902e6070.zip
+        unzip *.zip
+        sudo gem install --no-document fpm
 
-    - name: Download and Install Python 3.6
-      run: |
-        wget https://www.python.org/ftp/python/3.6.15/Python-3.6.15.tgz
-        tar -xzf Python-3.6.15.tgz
-        cd Python-3.6.15
-        ./configure --enable-optimizations
-        make -j $(nproc)
-        sudo make altinstall
-
-    - name: Ensure Python 3.6 is Installed
-      run: |
-        python3.6 --version
-        python3.6 -m pip --version
+    - name: Set up Python 3.6
+      run: ./util/setup_python36.sh
 
     - name: Setup venv
       run: |
@@ -76,43 +41,35 @@ jobs:
         path: out/Vial-x86_64.AppImage
 
   build-mac:
-    runs-on: macos-latest  # Use the latest macOS runner
-
+    runs-on: macos-12
     steps:
-    - uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
     - name: Get Python
-      run: curl -L https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx${MACOSX_DEPLOYMENT_TARGET}.pkg -o "python.pkg"
-
+      run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx${MACOSX_DEPLOYMENT_TARGET}.pkg -o "python.pkg"
     - name: Verify download
       run: shasum -a 256 -c <<< '4bcd53faffc98d193ef7cdccd5668de3829c702af4db45258819a84a2cab60d0 *python.pkg'
-
     - name: Install Python
       run: sudo installer -pkg python.pkg -target /
-
     - name: Setup venv
       run: |
         python3 -m venv venv
         source venv/bin/activate
         pip install -r requirements.txt
-
     - name: Build
       run: |
         source venv/bin/activate
         fbs freeze
         hdiutil create -volname Vial -srcfolder "target/Curlton KeyStation.app" -ov -format UDZO vial-mac.dmg
-
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
       with:
         name: vial-mac
         path: vial-mac.dmg
 
   build-win:
     runs-on: windows-2019
-
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
+    - uses: actions/setup-python@v5  # Updated to v5 for Node.js 20 support
       with:
         python-version: '3.6.x'
     - name: Setup venv
@@ -130,7 +87,7 @@ jobs:
         . .\venv\Scripts\activate.ps1
         fbs freeze
         Compress-Archive -Path "target\Curlton KeyStation" -DestinationPath vial-win.zip
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
       with:
         name: vial-win
         path: vial-win.zip
@@ -139,7 +96,7 @@ jobs:
         $env:Path += ";C:\Program Files (x86)\NSIS"
         . .\venv\Scripts\activate.ps1
         fbs installer
-    - uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4  # Updated to v4 for Node.js 20 support
       with:
         name: vial-win-installer
         path: target\Curlton KeyStationSetup.exe
