--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build-linux:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04  # Use the default runner without a custom Docker container
 
     steps:
     - uses: actions/checkout@v4
@@ -22,7 +22,7 @@ jobs:
 
     - name: Setup venv
       run: |
-        python3.6 -m venv venv
+        ./util/python36/prefix/bin/python3 -m venv venv
         . venv/bin/activate
         pip install -r requirements.txt
 
