--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         path: vial-mac.dmg
 
   build-win:
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
     - uses: actions/setup-python@v5  # Updated to v5 for Node.js 20 support
