--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,10 @@
 name: CI
-
 on: [push, pull_request]
-
 jobs:
   build-linux:
     runs-on: ubuntu-22.04  # Use the default runner without a custom Docker container
-
     steps:
     - uses: actions/checkout@v4
-
     - name: Install dependencies
       run: |
         sudo apt-get update
@@ -16,16 +12,13 @@ jobs:
         wget https://github.com/AppImage/pkg2appimage/archive/38603d92359a48189c35debad9005e8e902e6070.zip
         unzip *.zip
         sudo gem install --no-document fpm
-
     - name: Set up Python 3.6
       run: ./util/setup_python36.sh
-
     - name: Setup venv
       run: |
         ./util/python36/prefix/bin/python3 -m venv venv
         . venv/bin/activate
         pip install -r requirements.txt
-
     - name: Build
       run: |
         . venv/bin/activate
@@ -34,12 +27,10 @@ jobs:
         deactivate
         ./pkg2appimage-*/pkg2appimage misc/Vial.yml
         mv out/Vial-*.AppImage out/Vial-x86_64.AppImage
-
     - uses: actions/upload-artifact@v4
       with:
         name: vial-linux
         path: out/Vial-x86_64.AppImage
-
   build-mac:
     runs-on: macos-11
     steps:
@@ -64,11 +55,17 @@ jobs:
       with:
         name: vial-mac
         path: vial-mac.dmg
-
   build-win:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
+    
+    # Install Visual C++ redistributables to fix msvcr100.dll missing error
+    - name: Install Visual C++ Redistributables
+      run: |
+        choco install vcredist2010 vcredist2012 -y
+      shell: powershell
+    
     - uses: actions/setup-python@v5  # Updated to v5 for Node.js 20 support
       with:
         python-version: '3.6.x'
