--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         name: vial-linux
         path: out/Vial-x86_64.AppImage
   build-mac:
-    runs-on: macos-11
+    runs-on: macos-14  # Updated from deprecated macos-11
     steps:
     - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
     - name: Get Python
