--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,9 @@ jobs:
     runs-on: macos-14  # Updated from deprecated macos-11
     steps:
     - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
-    - name: Get Python
-      run: curl https://www.python.org/ftp/python/${PYTHON_VERSION}/python-${PYTHON_VERSION}-macosx${MACOSX_DEPLOYMENT_TARGET}.pkg -o "python.pkg"
-    - name: Verify download
-      run: shasum -a 256 -c <<< '4bcd53faffc98d193ef7cdccd5668de3829c702af4db45258819a84a2cab60d0 *python.pkg'
-    - name: Install Python
-      run: sudo installer -pkg python.pkg -target /
+    - uses: actions/setup-python@v5  # Much simpler than manual download
+      with:
+        python-version: '3.6.x'
     - name: Setup venv
       run: |
         python3 -m venv venv
