--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 altgraph==0.17
 fbs==0.9.0
 future==0.18.2
+# Install Cython first before hidapi to avoid build issues
+Cython>=0.29.0
 git+https://github.com/vial-kb/cython-hidapi@88d8983b3dc65b9ef84238abe3f46004b0ef2fd0#egg=hidapi
-keyboard==0.13.5
 macholib==1.14
 pefile==2019.4.18
-PyInstaller==3.4
-PyQt5==5.9.2
+PyInstaller==3.6
+PyQt5==5.15.7
+PyQt5-sip==12.11.0
 https://github.com/danthedeckie/simpleeval/archive/41c99b8e224a7a0ae0ac59c773598fe79a4470db.zip
-sip==4.19.8
-pywin32==303; sys_platform == 'win32'
-certifi
