--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,9 @@ jobs:
     - uses: actions/setup-python@v5  # Much simpler than manual download
       with:
         python-version: '3.10.x'  # Minimum version available on macOS 14 ARM64
+    - name: Upgrade pip
+      run: |
+        python -m pip install --upgrade pip setuptools wheel     
     - name: Setup venv
       run: |
         python3 -m venv venv
