--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altgraph==0.17
 fbs==0.9.0
 future==0.18.2
+Cython>=0.29.0,<3.0.0
 git+https://github.com/vial-kb/cython-hidapi@88d8983b3dc65b9ef84238abe3f46004b0ef2fd0#egg=hidapi
 keyboard==0.13.5
 macholib==1.14
