--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,8 @@ jobs:
       run: |
         python -m venv venv
         . .\venv\Scripts\activate.ps1
+        python -m pip install --upgrade pip setuptools wheel
+        pip install "Cython>=0.29.0,<3.0.0"
         pip install -r requirements.txt
     - name: Install NSIS
       run: |
