--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         name: vial-mac
         path: vial-mac.dmg
   build-win:
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
     
