--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,10 +57,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
     
-    # Install Visual C++ redistributables to fix msvcr100.dll missing error
     - name: Install Visual C++ Redistributables
       run: |
-        choco install vcredist2012 -y
+        choco install vcredist2010 vcredist2012 --ignore-checksums -y
       shell: powershell
         
     - uses: actions/setup-python@v5  # Updated to v5 for Node.js 20 support
