--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,22 +57,18 @@ jobs:
     steps:
     - uses: actions/checkout@v4  # Updated to v4 for Node.js 20 support
     
-    - name: Install Visual C++ Redistributables - Direct Download
+    - name: Install Visual C++ Redistributables - Force Chocolatey
       run: |
-        # Download and install VC++ 2010 x64 redistributable directly
-        Invoke-WebRequest -Uri "https://download.microsoft.com/download/1/6/5/165255E7-1014-4D0A-B094-B6A430A6BFFC/vcredist_x64.exe" -OutFile "vcredist_x64_2010.exe"
-        Start-Process -FilePath "vcredist_x64_2010.exe" -ArgumentList "/quiet" -Wait
+        # Update chocolatey first
+        choco upgrade chocolatey -y
         
-        # Download and install VC++ 2010 x86 redistributable directly
-        Invoke-WebRequest -Uri "https://download.microsoft.com/download/1/6/5/165255E7-1014-4D0A-B094-B6A430A6BFFC/vcredist_x86.exe" -OutFile "vcredist_x86_2010.exe"
-        Start-Process -FilePath "vcredist_x86_2010.exe" -ArgumentList "/quiet" -Wait
+        # Force install with various flags
+        choco install vcredist2010 -y --force --ignore-checksums --allow-empty-checksums --no-progress
+        choco install vcredist2012 -y --force --ignore-checksums --allow-empty-checksums --no-progress
         
-        # Also install 2012 redistributables
-        Invoke-WebRequest -Uri "https://download.microsoft.com/download/1/6/B/16B06F60-3B20-4FF2-B699-5E9B7962F9AE/VSU_4/vcredist_x64.exe" -OutFile "vcredist_x64_2012.exe"
-        Start-Process -FilePath "vcredist_x64_2012.exe" -ArgumentList "/quiet" -Wait
-        
-        Invoke-WebRequest -Uri "https://download.microsoft.com/download/1/6/B/16B06F60-3B20-4FF2-B699-5E9B7962F9AE/VSU_4/vcredist_x86.exe" -OutFile "vcredist_x86_2012.exe"
-        Start-Process -FilePath "vcredist_x86_2012.exe" -ArgumentList "/quiet" -Wait
+        # Verify installation
+        Get-ChildItem "C:\Windows\System32" -Filter "*msvcr*" | Select-Object Name, LastWriteTime
+        Get-ChildItem "C:\Windows\SysWOW64" -Filter "*msvcr*" | Select-Object Name, LastWriteTime
       shell: powershell
         
     - uses: actions/setup-python@v5  # Updated to v5 for Node.js 20 support
